added outline of function for pages with number of trackers

--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -14,7 +14,7 @@
     <div>
         <form>
         <label>query<select id="queryName">
-            <option value="get_trackers">get_trackers</option> 
+            <option value="get_trackers">get_trackers</option>
             <option value="get_top_trackers" selected>get_top_trackers</option>
             <option value="get_top_inferences" selected>get_top_inferences</option>
             <option value="get_page_visit_count_by_tracker">get_page_visit_count_by_tracker</option>
@@ -24,6 +24,7 @@
             <option value="get_trackers_by_inference_count">get_trackers_by_inference_count</option>
             <option value="get_domains_by_tracker">get_domains_by_tracker</option>
             <option value="get_pages_by_tracker_and_domain">get_pages_by_tracker_and_domain</option>
+            <option value="get_pages_with_number_of_trackers">get_pages_with_number_of_trackers</option>
             <option value="get_pages_by_tracker_and_inference">get_pages_by_tracker_and_inference</option>
             <option value="get_tracker_with_inferences_by_domain">get_tracker_with_inferences_by_domain</option>
             <option value="get_info_about_tracker">get_info_about_tracker</option>
