escaping page names (html in stackoverflow pages)

--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -82,8 +82,16 @@
                       <div class="col-6 col-sm-3 placeholder">
                         <div class="card">
                           <div class="card-block">
+                            <h1 class="card-title"><span class="sumTrackers10orMore"></h1>
+                            <p class="card-text">sites you've visited with 10 or more trackers</p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="col-6 col-sm-3 placeholder">
+                        <div class="card">
+                          <div class="card-block">
                             <h3 class="card-title">Special title treatment</h3>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text">With supporting text below as .</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                           </div>
                         </div>
@@ -92,16 +100,7 @@
                         <div class="card">
                           <div class="card-block">
                             <h3 class="card-title">Special title treatment</h3>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-6 col-sm-3 placeholder">
-                        <div class="card">
-                          <div class="card-block">
-                            <h3 class="card-title">Special title treatment</h3>
-                            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                            <p class="card-text">With supporting text below as a </p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                           </div>
                         </div>
