attempting to get pages no trackers

--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -30,6 +30,9 @@
             <option value="get_tracker_with_inferences_by_domain">get_tracker_with_inferences_by_domain</option>
             <option value="get_info_about_tracker">get_info_about_tracker</option>
             <option value="get_domains_by_tracker_count">get_domains_by_tracker_count</option>
+            <option value="get_pages_no_trackers">get_pages_no_trackers</option>
+            <option value="get_domains_no_trackers">get_domains_no_trackers</option>
+
         </select></label>
 
         <p><label>domain<input type="text" id="domain" value="www.nytimes.com"></label></p>
