--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -33,6 +33,8 @@
             <option value="get_domains_by_tracker_count">get_domains_by_tracker_count</option>
             <option value="get_pages_no_trackers">get_pages_no_trackers</option>
             <option value="get_domains_no_trackers">get_domains_no_trackers</option>
+            <option value="get_inference_count">get_inference_count</option>
+            
 
         </select></label>
 
