make counts optional

--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -15,8 +15,7 @@
         <form>
         <label>query<select id="queryName">
             <option value="get_trackers">get_trackers</option>
-            <option value="get_top_trackers" selected>get_top_trackers</option>
-            <option value="get_top_inferences" selected>get_top_inferences</option>
+            <option value="get_inferences" selected>get_inferences</option>
             <option value="get_page_visit_count_by_tracker">get_page_visit_count_by_tracker</option>
             <option value="get_inferences_by_tracker">get_inferences_by_tracker</option>
             <option value="get_trackers_by_inference">get_trackers_by_inference</option>
@@ -34,7 +33,7 @@
             <option value="get_pages_no_trackers">get_pages_no_trackers</option>
             <option value="get_domains_no_trackers">get_domains_no_trackers</option>
             <option value="get_inference_count">get_inference_count</option>
-            
+            <option value="get_inferences_by_tracker_count">get_inferences_by_tracker_count</option>
 
         </select></label>
 
