a few loose ends

--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -34,7 +34,7 @@
             <option value="get_domains_no_trackers">get_domains_no_trackers</option>
             <option value="get_inference_count">get_inference_count</option>
             <option value="get_inferences_by_tracker_count">get_inferences_by_tracker_count</option>
-
+	    <option value="emptyDB">emptyDB</option>
         </select></label>
 
         <p><label>domain<input type="text" id="domain" value="www.nytimes.com"></label></p>
