better failure behavior, readd button

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -17,10 +17,12 @@
         </h5>
         <!--<div class="card-block">-->
         <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-            <p class="tt_text" id="tt_hook">On <strong id="pagetitle"></strong>, there are <strong id="trackercount"></strong> trackers.</p>
-            <p id="trackerinfo" class="hidden">One of these trackers is <strong id="trackername"></strong>, which knows about your activity on this page and <strong id="trackerpagecount"></strong> others.</p>
-        </li>
+        <div id="pageinfo" class="hidden">
+            <li class="list-group-item">
+                <p class="tt_text" id="tt_hook">On <strong id="pagetitle"></strong>, there are <strong id="trackercount"></strong> trackers.</p>
+                <p id="trackerinfo" class="hidden">One of these trackers is <strong id="trackername"></strong>, which knows about your activity on this page and <strong id="trackerpagecount"></strong> others.</p>
+            </li>
+        </div>
         <!-- <li class="list-group-item">
             <p><strong>AdCompany2</strong> also knows about your activity on this page and <strong id='mosttrackercount'></strong>.</p>
         </li> -->
@@ -28,9 +30,10 @@
             <p><strong>AdCompany3</strong> also knows about your activity on this page and <strong id='mosttrackercount'></strong>.</p>
         </li>
         <li class="list-group-item">
-            <p>These companies have likely inferred that you are interested in <strong id='mostrackerinferences'></strong>.</p>
+            <p>These companies have likely inferred that you are interested in <strong id='mostrackerinferences'></strong>.</p> -->
         <li class="list-group-item">
-            <button type="button" class="btn show-more-btn">Show me more</button> -->
+            <button type="button" class="btn show-more-btn">Show me more about what the trackers know</button>
+        </li>
     </div>
     <div id="status"></div>
     <img id="image-result" hidden>
