--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -2,14 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../lib/bootstrap.min.css">
+        <script src="../dist/infopage.js"></script>
+        <!-- <link rel="stylesheet" href="../lib/bootstrap.min.css"> -->
         <link rel="stylesheet" href="style.css">
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
-        <script src="../lib/jquery-3.2.1.min.js"></script>
-        <script src="../lib/popper.min.js"></script>
-        <script src="../lib/bootstrap.min.js"></script>
-        <script src="../lib/d3.min.js"></script>
-        <script src="infopage.js"></script>
+        <!-- <script src="../lib/popper.min.js"></script> -->
+        <!-- <script src="../lib/bootstrap.min.js"></script> -->
         
     </head>
     <body>
@@ -204,7 +202,6 @@
                         <label><input type="radio" name="mode" value="count"> Count</label>
                     </form> -->
                 </div>
-                <script src="inferviz.js"></script>
 
               <div class="tab-pane fade" id="supergroup" role="tabpanel">
                   <div class="card">
