--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <!-- <link rel="stylesheet" href="../lib/bootstrap.min.css"> -->
-        <!-- <link rel="stylesheet" href="style.css"> -->
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
-        <!-- <script src="../lib/jquery-3.2.1.min.js"></script>
-        <script src="../lib/popper.min.js"></script>
-        <script src="../lib/bootstrap.min.js"></script> -->
     </head>
   <body>
 
@@ -51,8 +46,7 @@
     <pre id="queryResult"></pre>
 </div>
 
-        <script src="debugscreen.js"></script>
+<script src="../dist/debugscreen.js"></script>
 
-
-  </body>
+</body>
 </html>
