Consistent casing for all database queries

--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -8,26 +8,26 @@
     <div>
         <form>
         <label>query<select id="queryName">
-            <option value="get_trackers">get_trackers</option>
-            <option value="get_inferences" selected>get_inferences</option>
-            <option value="get_page_visit_count_by_tracker">get_page_visit_count_by_tracker</option>
-            <option value="get_inferences_by_tracker">get_inferences_by_tracker</option>
-            <option value="get_trackers_by_inference">get_trackers_by_inference</option>
-            <option value="get_trackers_by_domain">get_trackers_by_domain</option>
-            <option value="get_trackers_by_inference_count">get_trackers_by_inference_count</option>
-            <option value="get_domains_by_tracker">get_domains_by_tracker</option>
-            <option value="get_pages_by_tracker_and_domain">get_pages_by_tracker_and_domain</option>
-            <option value="get_pages_with_number_of_trackers">get_pages_with_number_of_trackers</option>
-            <option value="get_domains_with_number_of_trackers">get_domains_with_number_of_trackers</option>
-            <option value="get_pages_by_tracker_and_inference">get_pages_by_tracker_and_inference</option>
-            <option value="get_number_of_pages">get_number_of_pages</option>
-            <option value="get_tracker_with_inferences_by_domain">get_tracker_with_inferences_by_domain</option>
-            <option value="get_info_about_tracker">get_info_about_tracker</option>
-            <option value="get_domains_by_tracker_count">get_domains_by_tracker_count</option>
-            <option value="get_pages_no_trackers">get_pages_no_trackers</option>
-            <option value="get_domains_no_trackers">get_domains_no_trackers</option>
-            <option value="get_inference_count">get_inference_count</option>
-            <option value="get_inferences_by_tracker_count">get_inferences_by_tracker_count</option>
+            <option value="getTrackers">getTrackers</option>
+            <option value="getInferences" selected>getInferences</option>
+            <option value="getPageVisitCountByTracker">getPageVisitCountByTracker</option>
+            <option value="getInferencesByTracker">getInferencesByTracker</option>
+            <option value="getTrackersByInference">getTrackersByInference</option>
+            <option value="getTrackersByDomain">getTrackersByDomain</option>
+            <option value="getTrackersByInferenceCount">getTrackersByInferenceCount</option>
+            <option value="getDomainsByTracker">getDomainsByTracker</option>
+            <option value="getPagesByTrackerAndDomain">getPagesByTrackerAndDomain</option>
+            <option value="getPagesWithNumberOfTrackers">getPagesWithNumberOfTrackers</option>
+            <option value="getDomainsWithNumberOfTrackers">getDomainsWithNumberOfTrackers</option>
+            <option value="getPagesByTrackerAndInference">getPagesByTrackerAndInference</option>
+            <option value="getNumberOfPages">getNumberOfPages</option>
+            <option value="getTrackerWithInferencesByDomain">getTrackerWithInferencesByDomain</option>
+            <option value="getInfoAboutTracker">getInfoAboutTracker</option>
+            <option value="getDomainsByTrackerCount">getDomainsByTrackerCount</option>
+            <option value="getPagesNoTrackers">getPagesNoTrackers</option>
+            <option value="getDomainsNoTrackers">getDomainsNoTrackers</option>
+            <option value="getInferenceCount">getInferenceCount</option>
+            <option value="getInferencesByTrackerCount">getInferencesByTrackerCount</option>
 	    <option value="emptyDB">emptyDB</option>
         </select></label>
 
