Popup summary working!

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -19,6 +19,12 @@
                 <p id="trackerinfo" class="hidden">One of these trackers is <strong id="trackername"></strong>, which knows about your activity on this page and <strong id="trackerpagecount"></strong> others.</p>
             </li>
         </div>
+
+        <div id="summary" class="hidden">
+            <li class="list-group-item">
+              <p>In total, <strong id="numTrackers">0</strong> trackers have seen you visit <strong id="numPages">0</strong> pages, and inferred <strong id="numInferences">0</strong> things about you.</p>
+            </li>
+        </div>
         <!-- <li class="list-group-item">
             <p><strong>AdCompany2</strong> also knows about your activity on this page and <strong id='mosttrackercount'></strong>.</p>
         </li> -->
