--- a/extension/debugscreen/index.html
+++ b/extension/debugscreen/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
     </head>
   <body>
 
