--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
         <script src="../dist/infopage.js"></script>
-        <!-- <link rel="stylesheet" href="../lib/bootstrap.min.css"> -->
         <link rel="stylesheet" href="style.css">
-        <!-- <script src="../lib/popper.min.js"></script> -->
-        <!-- <script src="../lib/bootstrap.min.js"></script> -->
         
     </head>
     <body>
