--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
+        <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
         <script src="../dist/popup.js"></script>
     </head>
   <body>
