Migrate popup and legacy infopage away from npm bundled bootstrap This caused conflicts between versions when we add new dashboard (next commit), so since those pages are either deprecated (infopage) or likely to be rewritten (popup), it was easiest to switch back to shipping those libraries directly in the extension

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -2,8 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="style.css">
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
+
+        <!-- Bootstrap and dependencies -->
+        <link rel="stylesheet" href="../lib/bootstrap4.min.css">
+        <script type="application/javascript" src="../lib/jquery-3.2.1.min.js"></script>
+        <script type="application/javascript" src="../lib/popper.min.js"></script>
+        <script type="application/javascript" src="../lib/bootstrap4.min.js"></script>
+
+        <link rel="stylesheet" href="style.css">
         <script src="../dist/popup.js"></script>
     </head>
   <body>
