--- a/extension/infopage/index.html
+++ b/extension/infopage/index.html
@@ -3,9 +3,15 @@
     <head>
         <meta charset="utf-8">
         <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
-        <script src="../dist/infopage.js"></script>
+
+        <!-- Bootstrap and dependencies -->
+        <link rel="stylesheet" href="../lib/bootstrap4.min.css">
+        <script type="application/javascript" src="../lib/jquery-3.2.1.min.js"></script>
+        <script type="application/javascript" src="../lib/popper.min.js"></script>
+        <script type="application/javascript" src="../lib/bootstrap4.min.js"></script>
+
         <link rel="stylesheet" href="style.css">
-        
+        <script src="../dist/infopage.js"></script>
     </head>
     <body>
       <div class="container-fluid">
