add code structure for new dashboard the code is borrowed from another project Ben made, so ignore all the stuff about emojis and unicode character blocks etc… it should all eventually be changed

--- a/extension/dashboard/index.html
+++ b/extension/dashboard/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tracking Transparency Dashboard</title>
+    <link rel="shortcut icon" href="../icons/super.svg">
+
+    <title>Tracking Transparency</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+
   </head>
   <body>
     <noscript>
