--- a/extension/dashboard/index.html
+++ b/extension/dashboard/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
+
     <link rel="shortcut icon" href="../icons/super.svg">
+
 
     <title>Tracking Transparency</title>
 
