--- a/extension/lightbeam/index.html
+++ b/extension/lightbeam/index.html
@@ -25,16 +25,14 @@
         <button class="active graph">Graph</button>
         <button class="list unimplemented">List</button>
       </div>
-      <h2>Data</h2>
+      <!-- <h2>Data</h2>
       <div>
-        <!-- @todo add click to save data -->
         <button class="download" id="save-data-button">Save Data</button>
         <button class="reset" id="reset-data-button">Reset Data</button>
       </div>
       <div class="nav-links">
-        <!-- @todo confirm feedback URL -->
         <a class="thumbs-up" href="mailto:lightbeam-feedback@mozilla.org">Give Us Feedback</a>
-      </div>
+      </div> -->
     </nav>
     </aside>
     <main role="main">
@@ -58,24 +56,7 @@
               <var id="num-third-parties"></var>
             </dd>
           </div>
-        </dl>
-        <!-- @todo add tracking protection and toggle functionality -->
-        <div class="tracking-protection" id="tracking-protection">
-          <label>Tracking Protection</label>
-          <div class="toggle-switch">
-            <label for="tracking-protection-control">
-              <input type="checkbox" id="tracking-protection-control">
-              <span class="toggle"></span>
-            </label>
-          </div>
-        </div>
-        <div class="tracking-protection" id="tracking-protection-disabled" hidden>
-          <label>Tracking Protection</label>
-          <div title="Due to technical issues this doesn't work in current Firefox. Please visit Firefox preferences to enable instead.">
-            Coming back in <a href="https://www.mozilla.org/en-US/firefox/quantum/">Firefox Quantum</a>
-          </div>
-        </div>
-        </div>
+        </dl>        
       </section>
       <section class="vis">
         <div class="vis-header max-graph">
