--- a/extension/lightbeam/index.html
+++ b/extension/lightbeam/index.html
@@ -3,29 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge">
-    <title>Firefox Lightbeam</title>
-    <meta name="description" content="Firefox Lightbeam is a Firefox add-on that uses interactive visualizations to show you the relationships between third parties and the sites you visit.">
+    <title>Lightbeam</title>
+    <meta name="description" content="Lightbeam is an add-on that uses interactive visualizations to show you the relationships between third parties and the sites you visit.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/lightbeam-48.png" type="image/x-icon">
     <link rel="icon" href="images/lightbeam-48.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <!-- <script src="ext-libs/d3.min.js"></script> -->
-    <!-- <script src="ext-libs/dialog-polyfill.js"></script> -->
     <script src="../dist/lightbeam.js" type="text/javascript"></script>
   </head>
   <body>
-    <aside class="max-graph">
-    <header>
-      <img class="logo" role="banner" src="images/lightbeam_150x45.png">
-    </header>
-    <nav role="navigation">
-      <h2>Visualization</h2>
-      <div class="toggle-menu">
-        <!-- @todo add click to toggle view between graph and list, highlighting active view -->
-        <button class="active graph">Graph</button>
-      </div>
-    </nav>
-    </aside>
     <main role="main">
       <section class="top-bar max-graph">
         <dl class="info-headings">
