--- a/extension/lightbeam/index.html
+++ b/extension/lightbeam/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="images/lightbeam-48.png" type="image/x-icon">
     <link rel="icon" href="images/lightbeam-48.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script src="../lib/d3.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" tynpe="text/css">
     <script src="../dist/lightbeam.js" type="text/javascript"></script>
   </head>
   <body>
