--- a/extension/lightbeam/index.html
+++ b/extension/lightbeam/index.html
@@ -9,8 +9,9 @@
     <link rel="shortcut icon" href="images/lightbeam-48.png" type="image/x-icon">
     <link rel="icon" href="images/lightbeam-48.png" type="image/x-icon">
     <script src="../lib/d3.min.js"></script>
-    <link rel="stylesheet" href="css/style.css" tynpe="text/css">
+    <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
     <script src="../dist/lightbeam.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/style.css" tynpe="text/css">
   </head>
   <body>
     <main role="main">
