--- a/extension/lightbeam/index.html
+++ b/extension/lightbeam/index.html
@@ -6,9 +6,9 @@
     <title>Lightbeam</title>
     <meta name="description" content="Lightbeam is an add-on that uses interactive visualizations to show you the relationships between third parties and the sites you visit.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="../lib/d3.min.js"></script>
     <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
     <script src="../dist/lightbeam.js" type="text/javascript"></script>
+    <script src="../dist/vendors~lightbeam.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/style.css" tynpe="text/css">
   </head>
   <body>
