--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
-    <script type="application/javascript" src="../lib/browser-polyfill.min.js"></script>
+    <script type="application/javascript" src="../lib/browser-polyfill.js"></script>
 
     <link rel="shortcut icon" href="../icons/super.svg">
 
