--- a/src/template.html
+++ b/src/template.html
@@ -5,7 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
     <script type="application/javascript" src="../lib/browser-polyfill.js"></script>
 
-    <link rel="shortcut icon" href="../icons/super.svg">
+    <link rel="shortcut icon" href="../icons/logo.svg">
 
     <% if (htmlWebpackPlugin.files.favicon) { %>
     <link rel="shortcut icon" href="<%= htmlWebpackPlugin.files.favicon%>">
