making the name changeable in the UI

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <% } %>
 
-    <title>Tracking Transparency</title>
+    <title><%= htmlWebpackPlugin.options.title || 'Tracking Transparency'%></title>
 
   </head>
   <body>
